--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "server": "nodemon ./server/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.19.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.22.3"
+    "react-router-dom": "6.22.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
