--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "6.22.3",
+    "tailwind": "^4.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -33,5 +34,9 @@
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.7"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
