--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-router-dom": "6.22.3",
     "tailwind": "^4.0.0",
     "uuid": "^9.0.1"
@@ -35,7 +35,7 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.7"
   },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "description": "Proyecto para la creacion de la nueva red social USocial",
   "main": "postcss.config.js",
   "author": "",
   "license": "ISC"
