--- a/package.json
+++ b/package.json
@@ -11,29 +11,37 @@
     "server": "nodemon ./server/index.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@types/react-router-dom": "^5.3.3",
     "cors": "^2.8.5",
     "express": "4.19.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "6.22.3",
-    "tailwind": "^4.0.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.7"
+    "vite": "^5.2.10"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "description": "Proyecto para la creacion de la nueva red social USocial",
   "main": "postcss.config.js",
