--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react-router-dom": "^5.3.3",
     "cors": "^2.8.5",
     "express": "4.19.2",
+    "js-base64": "^3.7.7",
     "nodemon": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "react-switch": "^7.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
