--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "express": "4.19.2",
     "js-base64": "^3.7.7",
     "nodemon": "^3.1.0",
     "react": "^17.0.0 || ^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
