--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
